--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2033,6 +2033,8 @@ Harder1=Down,Down
 Harder2=MenuDown,MenuDown
 NextSort1=MenuLeft-MenuRight-Start
 NextSort2=MenuLeft+MenuRight
+NextSort3=Left-Right-Start
+NextSort4=Left+Right
 Menu1=Up,Down,Up,Down
 Menu2=MenuUp,MenuDown,MenuUp,MenuDown
 Mirror=Up,Left,Right,Left,Right
