add missing metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3382,3 +3382,6 @@ LevelP2OnCommand=addy,-140
 [AttackDisplay]
 TextP1OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
 TextP2OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
+
+[ProfileManager]
+StatsTitle=StepMania Statistics
