update installer script

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -66,12 +66,14 @@ FILE:Characters/default:OVERWRITE
 #FILE:Characters/instructions.txt:OVERWRITE
 FILE:Courses/instructions.txt:OVERWRITE
 FILE:Courses/Samples:OVERWRITE
+FILE:Packages/instructions.txt:OVERWRITE
 RM:NoteSkins/common/default
 RM:NoteSkins/dance/MAX
 RM:NoteSkins/dance/default
 RM:NoteSkins/dance/flat
 RM:NoteSkins/dance/note
 RM:NoteSkins/dance/solo
+FILE:NoteSkins/instructions.txt
 FILE:NoteSkins/common/default:OVERWRITE
 FILE:NoteSkins/dance/default:OVERWRITE
 FILE:NoteSkins/dance/flat:OVERWRITE
