Major Pop'n Music Theme Update Themers can now set off a sequence of sound effects via metrics on the Stage Evaluation screen (good for games like beatmania, pop'n and pump that have a series of SFX)

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1069,15 +1069,6 @@ ShowLifeMeterForDisabledPlayers=1
 [ScreenEvaluation]
 BannerWidth=248
 BannerHeight=78
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1 // how long to wait until we play the sound after the screen appears.... -1 means play no sound ever.
-JudgeSoundIfJudgeGraphicsFullAlpha=0  // only play the sound if one of the judge graphics for the associated sound are full alpha
 LargeBannerX=320
 LargeBannerY=100
 LargeBannerOnCommand=addy,480;sleep,0.0;decelerate,0.3;addy,-480
@@ -1463,15 +1454,9 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
+FailedSoundTime=0
+PassedSoundTime=0
+NumSequenceSounds=0
 
 [ScreenEvaluationSummary]
 NextScreen=ScreenNameEntry
@@ -1500,15 +1485,6 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
 
 [ScreenEvaluationNonstop]
 NextScreen=ScreenNameEntry
@@ -1537,15 +1513,6 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
 
 [ScreenEvaluationOni]
 NextScreen=ScreenNameEntry
@@ -1574,15 +1541,6 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
 
 [ScreenEvaluationEndless]
 NextScreen=ScreenNameEntry
@@ -1611,15 +1569,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
+
 
 [ScreenEvaluationBattle]
 NextScreen=ScreenSelectMusic
@@ -1648,15 +1598,6 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
 
 [ScreenEvaluationRave]
 NextScreen=ScreenSelectMusic
@@ -1685,15 +1626,6 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
-JudgeSoundTimeMarvelous=-1
-JudgeSoundTimePerfect=-1
-JudgeSoundTimeGreat=-1
-JudgeSoundTimeGood=-1
-JudgeSoundTimeBoo=-1
-JudgeSoundTimeMiss=-1
-JudgeSoundTimeOK=-1
-JudgeSoundTimeMaxCombo=-1
-JudgeSoundIfJudgeGraphicsFullAlpha=0
 
 [ScreenMusicScroll]
 ScrollDelay=0.2
