--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -73,7 +73,7 @@ RM:NoteSkins/dance/default
 RM:NoteSkins/dance/flat
 RM:NoteSkins/dance/note
 RM:NoteSkins/dance/solo
-FILE:NoteSkins/instructions.txt
+FILE:NoteSkins/instructions.txt:OVERWRITE
 FILE:NoteSkins/common/default:OVERWRITE
 FILE:NoteSkins/dance/default:OVERWRITE
 FILE:NoteSkins/dance/flat:OVERWRITE
