add missing NumSequenceSounds metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1598,6 +1598,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+NumSequenceSounds=0
 
 [ScreenEvaluationRave]
 NextScreen=ScreenSelectMusic
@@ -1626,6 +1627,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+NumSequenceSounds=0
 
 [ScreenMusicScroll]
 ScrollDelay=0.2
