other missing metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1598,6 +1598,8 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+FailedSoundTime=0
+PassedSoundTime=0
 NumSequenceSounds=0
 
 [ScreenEvaluationRave]
@@ -1627,6 +1629,8 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+FailedSoundTime=0
+PassedSoundTime=0
 NumSequenceSounds=0
 
 [ScreenMusicScroll]
