--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1447,6 +1447,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=1
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1478,6 +1482,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=1
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1506,6 +1514,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1534,6 +1546,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
@@ -1562,6 +1578,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
@@ -1591,6 +1611,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1622,6 +1646,10 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
 ShowTotalError=0
+ShowJumps=0
+ShowHolds=0
+ShowMines=0
+ShowHands=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
