--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1852,6 +1852,9 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="Bookkeeper.h">
 			</File>
 			<File
+				RelativePath="CombinedLifeMeter.h">
+			</File>
+			<File
 				RelativePath=".\FontManager.cpp">
 			</File>
 			<File
