--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -974,6 +974,14 @@ PlayerOptionsP2ExtraX=320
 PlayerOptionsP2ExtraY=30
 PlayerOptionsP2ExtraOnCommand=zoom,0.5;addy,-100;sleep,0.5;linear,1;addy,100
 PlayerOptionsP2ExtraOffCommand=linear,1;addy,-100
+PlayerNameP1X=0
+PlayerNameP1Y=0
+PlayerNameP1OnCommand=hidden,1
+PlayerNameP1OffCommand=
+PlayerNameP2X=0
+PlayerNameP2Y=0
+PlayerNameP2OnCommand=hidden,1
+PlayerNameP2OffCommand=
 SongOptionsX=320
 SongOptionsY=470
 SongOptionsOnCommand=zoom,0.5;addy,100;sleep,0.5;linear,1;addy,-100
