memory card refactoring

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -114,6 +114,9 @@ Lights = arch/Lights/LightsDriver.h \
 		 arch/Lights/LightsDriver_LinuxSerial.cpp arch/Lights/LightsDriver_LinuxSerial.h \
 		 arch/Lights/LightsDriver_SystemMessage.cpp arch/Lights/LightsDriver_SystemMessage.h
 
+Lights = arch/MemoryCard/MemoryCardDriver.h \
+		 arch/MemoryCard/MemoryCardDriver_Linux.cpp arch/MemoryCard/MemoryCardDriver_Linux.h 
+
 LowLevelWindow = arch/LowLevelWindow/LowLevelWindow.h \
 		 arch/LowLevelWindow/LowLevelWindow_SDL.cpp arch/LowLevelWindow/LowLevelWindow_SDL.h
 
