--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1853,6 +1853,7 @@ ExplanationP2OnCommand=wrapwidthpixels,500;horizalign,right;cropright,1;linear,0
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
+ShowScrollBar=0
 
 [ScreenMapControllers]
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
