--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -156,7 +156,8 @@ JukeboxMenu.cpp JukeboxMenu.h MenuElements.cpp MenuElements.h MenuTimer.cpp Menu
 MusicBannerWheel.cpp MusicBannerWheel.h MusicList.cpp MusicList.h MusicSortDisplay.cpp MusicSortDisplay.h \
 MusicWheel.cpp MusicWheel.h MusicWheelItem.cpp MusicWheelItem.h OptionIcon.cpp OptionIcon.h OptionIconRow.cpp OptionIconRow.h \
 OptionsCursor.cpp OptionsCursor.h PaneDisplay.cpp PaneDisplay.h ScrollBar.cpp ScrollBar.h ScrollingList.cpp ScrollingList.h \
-SnapDisplay.cpp SnapDisplay.h TextBanner.cpp TextBanner.h WheelNotifyIcon.cpp WheelNotifyIcon.h
+SnapDisplay.cpp SnapDisplay.h TextBanner.cpp TextBanner.h WheelNotifyIcon.cpp WheelNotifyIcon.h \
+DualScrollBar.cpp DualScrollBar.h
 
 ActorsInGameplay = \
 ArrowBackdrop.cpp ArrowBackdrop.h ArrowEffects.cpp ArrowEffects.h Background.cpp Background.h \
