--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -765,6 +765,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="StyleInput.h">
 			</File>
 			<File
+				RelativePath="TimingData.cpp">
+			</File>
+			<File
+				RelativePath="TimingData.h">
+			</File>
+			<File
 				RelativePath="TitleSubstitution.cpp">
 			</File>
 			<File
