add LargeBannerFrame metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1081,6 +1081,10 @@ LargeBannerX=320
 LargeBannerY=100
 LargeBannerOnCommand=addy,480;sleep,0.0;decelerate,0.3;addy,-480
 LargeBannerOffCommand=sleep,0.8;accelerate,0.3;addy,480
+LargeBannerFrameX=320
+LargeBannerFrameY=100
+LargeBannerFrameOnCommand=addy,480;sleep,0.0;decelerate,0.3;addy,-480
+LargeBannerFrameOffCommand=sleep,0.8;accelerate,0.3;addy,480
 StageX=320
 StageY=72
 StageOnCommand=addy,480;sleep,0.0;decelerate,0.3;addy,-480
