add ScreenRanking banner frame

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2475,6 +2475,10 @@ BannerWidth=220
 BannerHeight=58
 BannerOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
 BannerOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+BannerFrameX=0
+BannerFrameY=0
+BannerFrameOnCommand=hidden,1
+BannerFrameOffCommand=
 TypeX=520
 TypeY=60
 TypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
