--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1854,6 +1854,14 @@ ExplanationTogetherOnCommand=wrapwidthpixels,1000;horizalign,left;cropright,1;li
 ExplanationZoom=0.5
 ExplanationP1OnCommand=wrapwidthpixels,500;horizalign,left;cropright,1;linear,0.5;cropright,0
 ExplanationP2OnCommand=wrapwidthpixels,500;horizalign,right;cropright,1;linear,0.5;cropright,0
+PlayerNameP1X=0
+PlayerNameP1Y=0
+PlayerNameP1OnCommand=hidden,1
+PlayerNameP1OffCommand=
+PlayerNameP2X=0
+PlayerNameP2Y=0
+PlayerNameP2OnCommand=hidden,1
+PlayerNameP2OffCommand=
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
