--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -926,6 +926,10 @@ SongNumberP2ExtraX=350
 SongNumberP2ExtraY=440
 SongNumberP2ExtraOnCommand=addy,100;sleep,0.5;linear,1;addy,-100
 SongNumberP2ExtraOffCommand=linear,1;addy,100
+CourseSongNumberX=0
+CourseSongNumberY=0
+CourseSongNumberOnCommand=hidden,1
+CourseSongNumberOffCommand=
 ScoreP1X=106
 ScoreP1Y=444
 ScoreP1OnCommand=addy,100;sleep,0.5;linear,1;addy,-100
