better memory card assignment logic, add memory card icons, more memory card sounds

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -58,6 +58,7 @@ Choice8=screen,ScreenTest
 Name8=SANDBOX
 TimerSeconds=-1 // none
 StyleIcon=0
+MemoryCardIcons=0
 LogoHomeOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 LogoOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 VersionOnCommand=horizalign,right;x,620;y,20;diffuse,0.6,0.6,0.6,1;zoom,0.5;shadowlength,2
@@ -92,6 +93,7 @@ JoinMessageP2X=520
 JoinMessageP2Y=336
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen=ScreenSelectGroup
 SilentWait=1
 BounceJoinMessage=1
@@ -107,6 +109,7 @@ Choice4=Style,double;name,double
 Choice5=Style,solo;name,solo
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen1=ScreenSelectDifficulty
 NextScreen2=ScreenSelectDifficulty
 NextScreen3=ScreenSelectDifficulty
@@ -175,6 +178,7 @@ PictureOffCommand=linear,0.5;diffusealpha,0;glow,1,1,1,0
 [ScreenSelectStyle5th]
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen=ScreenSelectDifficulty
 PadX1=70
 PadY1=300
@@ -226,6 +230,7 @@ GuideX=320
 GuideY=374
 TimerSeconds=30
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen=ScreenSelectGroup
 ScrollingListX=320
 ScrollingListY=250
@@ -250,6 +255,7 @@ CharacterIconP2OffCommand=linear,0.3;diffusealpha,0;sleep,10
 [ScreenStyleSplash]
 NextScreen=ScreenSelectGroup
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenSelectDifficulty]
@@ -265,6 +271,7 @@ Choice8=PlayMode,rave;name,rave
 NumChoicesOnPage1=4
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen1=ScreenSelectGroup
 NextScreen2=ScreenSelectGroup
 NextScreen3=ScreenSelectGroup
@@ -484,6 +491,7 @@ SleepAfterChoiceSeconds=0.3
 SleepAfterTweenOffSeconds=0.8
 TimerSeconds=60
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenSelectGroup]
 FrameX=180
@@ -519,6 +527,7 @@ MusicListOffCommand=
 SleepAfterTweenOffSeconds=0.8
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 NextScreen=ScreenInstructions
 
 [GroupList]
@@ -554,6 +563,7 @@ NextScreenBattle=ScreenSelectCharacter
 NextScreenRave=ScreenSelectCharacter
 TimerSeconds=15
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenSelectMusic]
 DefaultSort=GROUP
@@ -717,6 +727,7 @@ CourseContentsShowCommand=
 CourseContentsHideCommand=
 TimerSeconds=60
 StyleIcon=1
+MemoryCardIcons=1
 SampleMusicDelay=0.25
 PrevScreenArcade=ScreenTitleMenu
 PrevScreenNonstop=ScreenTitleMenu
@@ -808,6 +819,7 @@ NextOptionsScreenBattle=ScreenPlayerOptions
 NextOptionsScreenRave=ScreenRaveOptions
 TimerSeconds=60
 StyleIcon=0
+MemoryCardIcons=0
 
 [ScreenSelectCourse]
 ExplanationX=132
@@ -833,6 +845,7 @@ ScoreP2Y=286
 ScoreZoom=0.8
 TimerSeconds=60
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenStage]
 NextScreen=ScreenGameplay
@@ -1474,6 +1487,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
@@ -1509,6 +1523,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenEvaluationNonstop]
 NextScreen=ScreenNameEntry
@@ -1541,6 +1556,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenEvaluationOni]
 NextScreen=ScreenNameEntry
@@ -1573,6 +1589,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenEvaluationEndless]
 NextScreen=ScreenNameEntry
@@ -1605,6 +1622,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+MemoryCardIcons=1
 
 
 [ScreenEvaluationBattle]
@@ -1638,6 +1656,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
@@ -1673,6 +1692,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
@@ -1687,18 +1707,21 @@ NextScreen=ScreenRanking
 ExplanationX=320
 ExplanationY=410
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenJukeboxMenu]
 ExplanationX=320
 ExplanationY=410
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenEditCoursesMenu]
 ExplanationX=320
 ExplanationY=410
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenSystemLayer]
@@ -1813,15 +1836,33 @@ StopMusicOnNext=0
 KeepAliveType=0		// 0 for MAX, 1 for 5th
 
 [MenuElements]
-HeaderOnCommand=x,320;y,22;addx,640;spring,0.5;addx,-640
+HeaderX=320
+HeaderY=22
+HeaderOnCommand=addx,640;spring,0.5;addx,-640
 HeaderOffCommand=bouncebegin,0.5;addx,640;
-FooterOnCommand=x,320;y,464
+FooterX=320
+FooterY=464
+FooterOnCommand=
 FooterOffCommand=
-HelpOnCommand=x,320;y,456;zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
+HelpX=320
+HelpY=456
+HelpOnCommand=zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
 HelpOffCommand=linear,0.5;zoomy,0
-StyleIconOnCommand=x,440;y,26;addx,640;spring,0.5;addx,-640
+StyleIconX=440
+StyleIconY=26
+StyleIconOnCommand=addx,640;spring,0.5;addx,-640
 StyleIconOffCommand=bouncebegin,0.5;addx,640;
-TimerOnCommand=x,590;y,22;addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP1X=460
+MemoryCardDisplayP1Y=20
+MemoryCardDisplayP1OnCommand=addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP1OffCommand=bouncebegin,0.5;addx,640;
+MemoryCardDisplayP2X=480
+MemoryCardDisplayP2Y=20
+MemoryCardDisplayP2OnCommand=addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP2OffCommand=bouncebegin,0.5;addx,640;
+TimerX=590
+TimerY=22
+TimerOnCommand=addx,640;spring,0.5;addx,-640
 TimerOffCommand=bouncebegin,0.5;addx,640;
 
 [MenuTimer]
@@ -1877,18 +1918,22 @@ OddLineIn=addx,640;decelerate,0.5;addx,-640;
 EvenLineOut=stoptweening;accelerate,0.3;addx,-640;
 OddLineOut=stoptweening;accelerate,0.3;addx,640;
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenCenterImage]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenTestInput]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenBookkeeping]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [HoldGhostArrow]
@@ -2200,9 +2245,11 @@ AttackDurationSeconds=10
 [ScreenSelectMaster]
 TimerSeconds=20
 StyleIcon=1
+MemoryCardIcons=1
 
 [ScreenInputOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2217,6 +2264,7 @@ Line6=conf,WheelSpeed
 
 [ScreenCoinOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2229,6 +2277,7 @@ Line4=conf,Premium
 
 [ScreenMachineOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2247,6 +2296,7 @@ Line10=conf,ShowNameEntry
 
 [ScreenGraphicOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2267,6 +2317,7 @@ Line12=conf,ShowBanners
 
 [ScreenGameplayOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2282,6 +2333,7 @@ Line7=conf,UnlockSystem
 
 [ScreenBackgroundOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2296,6 +2348,7 @@ Line6=conf,RandomBackgrounds
 
 [ScreenAppearanceOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 
@@ -2320,6 +2373,7 @@ Line14=conf,Lyrics
 
 [ScreenAutogenOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2337,6 +2391,7 @@ Rename=
 CardDirPlayer1=
 CardDirPlayer2=
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenUnlock]
@@ -2599,6 +2654,7 @@ TextColor5=1.0,1,1.0,1
 
 [ScreenSoundOptions]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2667,6 +2723,7 @@ FakeBeatsPerSec=2.5
 TimerSeconds=24
 MaxRankingNameLength=4
 StyleIcon=1
+MemoryCardIcons=1
 
 [EditMenu]
 Arrows1X=190
@@ -2747,6 +2804,7 @@ Row8Y=360
 
 [ScreenOptionsMenu]
 StyleIcon=0
+MemoryCardIcons=1
 TimerSeconds=0
 
 # "Rows" sets the number of rows; this field is required.
@@ -2836,6 +2894,7 @@ TipY=0
 
 [ScreenSelectGame]
 StyleIcon=0
+MemoryCardIcons=0
 TimerSeconds=0
 PrevScreen=ScreenTitleMenu
 NextScreen=ScreenTitleMenu
@@ -2859,6 +2918,7 @@ NextScreenBattle=ScreenSongOptions
 NextScreenRave=ScreenSongOptions
 TimerSeconds=30
 StyleIcon=0
+MemoryCardIcons=0
 
 PrevScreen=
 NextScreen=
@@ -2886,6 +2946,7 @@ PrevScreen=ScreenSelectMusic
 NextScreen=ScreenStage
 TimerSeconds=30
 StyleIcon=0
+MemoryCardIcons=0
 
 OptionMenuFlags=rows,5
 
@@ -2911,6 +2972,7 @@ NextScreenRave=ScreenStage
 Game=Change the current game type with this option.
 TimerSeconds=30
 StyleIcon=0
+MemoryCardIcons=0
 
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
@@ -2992,6 +3054,7 @@ IconsP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
 SleepAfterTweenOffSeconds=0.8
 TimerSeconds=40
 StyleIcon=1
+MemoryCardIcons=1
 PrevScreenArcade=ScreenTitleMenu
 PrevScreenNonstop=ScreenTitleMenu
 PrevScreenOni=ScreenTitleMenu
