Update Default Themes to support various new screen elements.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -849,6 +849,26 @@ MemoryCardIcons=1
 
 [ScreenStage]
 NextScreen=ScreenGameplay
+CharacterIconP1X=999
+CharacterIconP2X=999
+CharacterIconP1Y=999
+CharacterIconP2Y=999
+CharacterIconP1OnCommand=hidden,1;
+CharacterIconP2OnCommand=hidden,1;
+CharacterIconP1OffCommand=hidden,1;
+CharacterIconP2OffCommand=hidden,1;
+SongTitleOnCommand=hidden,1
+SongTitleOffCommand=hidden,1
+SongTitleX=999
+SongTitleY=999
+ArtistOnCommand=hidden,1
+ArtistOffCommand=hidden,1
+ArtistX=999
+ArtistY=999
+BannerY=999
+BannerX=999
+BannerOnCommand=hidden,1
+BannerOffCommand=hidden,1
 
 [ScreenGameplay]
 ShowEvaluationOnFail=0
@@ -1455,6 +1475,18 @@ SpinGrades=1
 CheerDelaySeconds=2.5
 NoMarvelousShiftUp=15
 FailedScreen=ScreenGameOver
+TotalScoreNumberP1Y=999
+TotalScoreNumberP2Y=999
+TotalScoreNumberP1X=999
+TotalScoreNumberP2X=999
+TotalScoreNumberP1OnCommand=hidden,1
+TotalScoreNumberP2OnCommand=hidden,1
+TotalScoreNumberP1OffCommand=hidden,1
+TotalScoreNumberP2OffCommand=hidden,1
+TotalScoreLabelY=999
+TotalScoreLabelX=999
+TotalScoreLabelOnCommand=hidden,1
+TotalScoreLabelOffCommand=hidden,1
 
 [ScreenEvaluationStage]
 NextScreen=ScreenSelectMusic
@@ -1491,6 +1523,7 @@ MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
+ShowTotalScoreArea=0
 
 [ScreenEvaluationSummary]
 NextScreen=ScreenNameEntry
@@ -1512,6 +1545,7 @@ ShowMiss=1
 ShowOK=1
 ShowMaxCombo=1
 ShowTotalError=0
+ShowTotalScoreArea=0
 ShowJumps=0
 ShowHolds=0
 ShowMines=0
@@ -1556,6 +1590,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+ShowTotalScoreArea=0
 MemoryCardIcons=1
 
 [ScreenEvaluationOni]
@@ -1589,6 +1624,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+ShowTotalScoreArea=0
 MemoryCardIcons=1
 
 [ScreenEvaluationEndless]
@@ -1622,6 +1658,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=30
 StyleIcon=1
+ShowTotalScoreArea=0
 MemoryCardIcons=1
 
 
@@ -1656,6 +1693,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+ShowTotalScoreArea=0
 MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
@@ -1692,6 +1730,7 @@ ShowComboArea=0
 ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
+ShowTotalScoreArea=0
 MemoryCardIcons=1
 FailedSoundTime=0
 PassedSoundTime=0
