--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1946,6 +1946,8 @@ PlayerNameP2X=0
 PlayerNameP2Y=0
 PlayerNameP2OnCommand=hidden,1
 PlayerNameP2OffCommand=
+PageOnCommand=
+LineHighlightOnCommand=
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
