--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2351,7 +2351,7 @@ Line3=conf,DisplayColor
 Line4=conf,TextureResolution
 Line5=conf,TextureColor
 Line6=conf,MovieColor
-Line7=conf,AntiAliasing
+Line7=conf,SmoothLines
 Line8=conf,KeepTexturesInMemory
 Line9=conf,RefreshRate
 Line10=conf,WaitForVsync
