--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2006,6 +2006,7 @@ MediumColor=1,0.1,0.1,1		// light red
 HardColor=0.2,1,0.2,1		// light green
 ChallengeColor=0.2,0.6,1.0,1	// blue
 ExtraColor=1.0,0.0,0.0,1.0	// red
+ExtraColorMeter=10
 
 [Background]
 LeftEdge=20
