--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1929,6 +1929,7 @@ PersonalRecordP2X=570
 PersonalRecordP2Y=398
 PersonalRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
 PersonalRecordP2OffCommand=linear,0.7;diffusealpha,0
+SpinGrades=1
 CheerDelaySeconds=2.5
 NoMarvelousShiftUp=15
 
