--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -963,6 +963,7 @@ CourseSongNumberX=0
 CourseSongNumberY=0
 CourseSongNumberOnCommand=hidden,1
 CourseSongNumberOffCommand=
+ShowScoreInRave=1
 ScoreP1X=106
 ScoreP1Y=444
 ScoreP1OnCommand=addy,100;sleep,0.5;linear,1;addy,-100
