--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3746,26 +3746,24 @@ Line14=list,Reload Songs/Courses
 Line15=list,Test Input
 
 [TextBanner]
-TitleHorizX=-90
-SubTitleHorizX=-90
-ArtistHorizX=-90
-MaxTitleWidth=180
-MaxSubTitleWidth=180
-MaxArtistWidth=180
-TitleHorizAlign=0
-SubTitleHorizAlign=0
-ArtistHorizAlign=0
+TitleX=-90
+TitleY=0
+TitleOnCommand=shadowlength,0;horizalign,left
+SubtitleX=-90
+SubtitleY=0
+SubtitleOnCommand=shadowlength,0;horizalign,left
+ArtistX=-90
+ArtistY=0
+ArtistOnCommand=shadowlength,0;horizalign,left
+
 ArtistPrependString=/
-TwoLinesTitleZoom=1.0
-TwoLinesArtistZoom=0.6
-ThreeLinesTitleZoom=1.0
-ThreeLinesSubTitleZoom=0.5
-ThreeLinesArtistZoom=0.6
-TwoLinesTitleY=-8
-TwoLinesArtistY=8
-ThreeLinesTitleY=-10
-ThreeLinesSubTitleY=0
-ThreeLinesArtistY=10
+
+TwoLinesTitleCommand=zoom,1;maxwidth,180;y,-8
+TwoLinesSubtitleCommand=hidden,1
+TwoLinesArtistCommand=zoom,0.6;maxwidth,266;y,8
+ThreeLinesTitleCommand=zoom,1;maxwidth,180;y,-10
+ThreeLinesSubtitleCommand=hidden,0;zoom,.5;maxwidth,360
+ThreeLinesArtistCommand=zoom,0.6;maxwidth,266;y,10
 
 [CourseEntryDisplay]
 BarX=0
