GrayArrow => ReceptorArrow move ReceptorArrow metrics into NoteSkin ReceptorArrow metrics, code cleanup

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -872,7 +872,6 @@ BannerOffCommand=hidden,1
 
 [ScreenGameplay]
 ShowEvaluationOnFail=0
-PressBlockY=10
 StaticBGY=240
 StaticBGX=320
 PrevScreenArcade=ScreenSelectMusic
@@ -2918,8 +2917,8 @@ PulseZoom=1.2
 TweenSeconds=0.05
 
 [Player]
-GrayArrowsYStandard=96
-GrayArrowsYReverse=384
+ReceptorArrowsYStandard=96
+ReceptorArrowsYReverse=384
 JudgmentXOffsetOneSideP1=0
 JudgmentXOffsetOneSideP2=0
 JudgmentXOffsetBothSides=0
@@ -2964,10 +2963,6 @@ TextOnCommand=horizalign,right;shadowlength,0
 LabelX=0
 LabelY=0
 LabelOnCommand=horizalign,left
-
-[GrayArrow]
-StepZoom=0.75
-StepSeconds=0.10
 
 [CodeDetector]
 Easier1=Up,Up
@@ -3620,7 +3615,7 @@ CharsZoomLarge=1.5
 CharsSpacingY=40
 ScrollingCharsColor=0.6,0.8,0.8,1
 SelectedCharsColor=0.8,1,1,1
-GrayArrowsY=100
+ReceptorArrowsY=100
 NumCharsToDrawBehind=2
 NumCharsToDrawTotal=10
 FakeBeatsPerSec=2.5
