--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1416,16 +1416,16 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="GhostArrowRow.h">
 			</File>
 			<File
-				RelativePath=".\GrayArrow.cpp">
+				RelativePath=".\ReceptorArrow.cpp">
 			</File>
 			<File
-				RelativePath=".\GrayArrow.h">
+				RelativePath=".\ReceptorArrow.h">
 			</File>
 			<File
-				RelativePath="GrayArrowRow.cpp">
+				RelativePath="ReceptorArrowRow.cpp">
 			</File>
 			<File
-				RelativePath="GrayArrowRow.h">
+				RelativePath="ReceptorArrowRow.h">
 			</File>
 			<File
 				RelativePath=".\HoldGhostArrow.cpp">
