add separate ranking metric for "empty name" and "no score name"

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3542,6 +3542,7 @@ TextColor1=0.6,0.6,1,1
 TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
 EmptyScoreName=STEP
+NoScoreName=STEP
 DifficultiesToShow=easy,medium,hard,challenge
 PageFadeSeconds=1.0
 
